--- a/.github/workflows/custom-aws-ci.yml
+++ b/.github/workflows/custom-aws-ci.yml
@@ -7,70 +7,70 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+**
 env:
-  ECR: 396262249347.dkr.ecr.us-east-1.amazonaws.com/cortex
+  ECR: 595926772921.dkr.ecr.us-west-2.amazonaws.com/cortex #396262249347 us-east-1
   GH_REF: ${{ github.ref }}
   IMAGE_DOWNLOAD_LOCATION: /actions-runner/_work/cortex_images/
 
 jobs:
-  lint:
-    runs-on: [self-hosted, prod]
-    container:
-      image: quay.io/cortexproject/build-image:upgrade-build-image-debian-491e60715-WIP
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v2
-      - name: Sym Link Expected Path to Workspace
-        run: |
-          mkdir -p /go/src/github.com/cortexproject/cortex
-          ln -s $GITHUB_WORKSPACE/* /go/src/github.com/cortexproject/cortex
-      - name: Lint
-        run: make BUILD_IN_CONTAINER=false lint
-      - name: Check Vendor Directory
-        run: make BUILD_IN_CONTAINER=false mod-check
-      - name: Check Protos
-        run: make BUILD_IN_CONTAINER=false check-protos
-      - name: Check Generated Documentation
-        run: make BUILD_IN_CONTAINER=false check-doc
-      - name: Check White Noise.
-        run: make BUILD_IN_CONTAINER=false check-white-noise
-  secure:
-    runs-on: [self-hosted, prod]
-    container:
-      image: quay.io/cortexproject/build-image:upgrade-build-image-debian-491e60715-WIP
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v2
-      - name: Sym Link Expected Path to Workspace
-        run: |
-          mkdir -p /go/src/github.com/cortexproject/cortex
-          ln -s $GITHUB_WORKSPACE/* /go/src/github.com/cortexproject/cortex
-      - name: Run Gosec Security Scanner
-        continue-on-error: true
-        uses: securego/gosec@master
-        with:
-          args: ./...
-  test:
-    runs-on: [self-hosted, prod]
-    container:
-      image: quay.io/cortexproject/build-image:upgrade-build-image-debian-491e60715-WIP
-    services:
-      cassandra:
-        image: cassandra:3.11
-        env:
-          JVM_OPTS: "-Xms1024M -Xmx1024M"
-        ports:
-          - 9042:9042
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v2
-      - name: Sym Link Expected Path to Workspace
-        run: |
-          mkdir -p /go/src/github.com/cortexproject/cortex
-          ln -s $GITHUB_WORKSPACE/* /go/src/github.com/cortexproject/cortex
-      - name: Run Tests
-        run: CASSANDRA_TEST_ADDRESSES=cassandra:9042 make BUILD_IN_CONTAINER=false test
+#   lint:
+#     runs-on: [self-hosted, prod]
+#     container:
+#       image: quay.io/cortexproject/build-image:upgrade-build-image-debian-491e60715-WIP
+#     steps:
+#       - name: Checkout Repo
+#         uses: actions/checkout@v2
+#       - name: Sym Link Expected Path to Workspace
+#         run: |
+#           mkdir -p /go/src/github.com/cortexproject/cortex
+#           ln -s $GITHUB_WORKSPACE/* /go/src/github.com/cortexproject/cortex
+#       - name: Lint
+#         run: make BUILD_IN_CONTAINER=false lint
+#       - name: Check Vendor Directory
+#         run: make BUILD_IN_CONTAINER=false mod-check
+#       - name: Check Protos
+#         run: make BUILD_IN_CONTAINER=false check-protos
+#       - name: Check Generated Documentation
+#         run: make BUILD_IN_CONTAINER=false check-doc
+#       - name: Check White Noise.
+#         run: make BUILD_IN_CONTAINER=false check-white-noise
+#   secure:
+#     runs-on: [self-hosted, prod]
+#     container:
+#       image: quay.io/cortexproject/build-image:upgrade-build-image-debian-491e60715-WIP
+#     steps:
+#       - name: Checkout Repo
+#         uses: actions/checkout@v2
+#       - name: Sym Link Expected Path to Workspace
+#         run: |
+#           mkdir -p /go/src/github.com/cortexproject/cortex
+#           ln -s $GITHUB_WORKSPACE/* /go/src/github.com/cortexproject/cortex
+#       - name: Run Gosec Security Scanner
+#         continue-on-error: true
+#         uses: securego/gosec@master
+#         with:
+#           args: ./...
+#   test:
+#     runs-on: [self-hosted, prod]
+#     container:
+#       image: quay.io/cortexproject/build-image:upgrade-build-image-debian-491e60715-WIP
+#     services:
+#       cassandra:
+#         image: cassandra:3.11
+#         env:
+#           JVM_OPTS: "-Xms1024M -Xmx1024M"
+#         ports:
+#           - 9042:9042
+#     steps:
+#       - name: Checkout Repo
+#         uses: actions/checkout@v2
+#       - name: Sym Link Expected Path to Workspace
+#         run: |
+#           mkdir -p /go/src/github.com/cortexproject/cortex
+#           ln -s $GITHUB_WORKSPACE/* /go/src/github.com/cortexproject/cortex
+#       - name: Run Tests
+#         run: CASSANDRA_TEST_ADDRESSES=cassandra:9042 make BUILD_IN_CONTAINER=false test
   build:
-    runs-on: [self-hosted, prod]
+    runs-on: [self-hosted, dev]
     container:
       image: quay.io/cortexproject/build-image:upgrade-build-image-debian-491e60715-WIP
     steps:
@@ -107,9 +107,9 @@ jobs:
           name: Docker Images
           path: ./images.tar
   deploy:
-    needs: [lint, secure, test, build]
+    needs: build #[lint, secure, test, build]
     if: (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')) && github.repository == 'aws-observability/cortex-dev'
-    runs-on: [self-hosted, prod]
+    runs-on: [self-hosted, dev]
     steps:
       # we use this directory instead of /actions-runner/_work/cortex-dev/cortex-dev
       # because of folder ownership issues
@@ -127,13 +127,15 @@ jobs:
           CORTEX_IMAGE=$(cat docker-images/image-name)
           echo "CORTEX_IMAGE=$CORTEX_IMAGE" >> $GITHUB_ENV
           docker load -i docker-images/$(echo $CORTEX_IMAGE | tr "/" _)
+          docker tag $CORTEX_IMAGE $ECR:latest
           docker images
       - name: Push to ECR
         # Self hosted runner manages authentication, no need to worry about docker login
         run: |
           cd $IMAGE_DOWNLOAD_LOCATION
-          echo "Pushing $CORTEX_IMAGE"
+          echo "Pushing $CORTEX_IMAGE and $ECR:latest"
           docker push $CORTEX_IMAGE
+          docker push $ECR:latest
       - name: Cleanup
         run: |
           cd $IMAGE_DOWNLOAD_LOCATION
