--- a/.github/workflows/custom-aws-ci.yml
+++ b/.github/workflows/custom-aws-ci.yml
@@ -1,4 +1,4 @@
-name: cortex-dev-ci
+name: cortex-prod-ci
 on:
   push:
     # will run on all changes to master, with image tag being master-<commit sha>
@@ -7,7 +7,7 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+**
 env:
-  ECR: 595926772921.dkr.ecr.us-west-2.amazonaws.com/cortex
+  ECR: 396262249347.dkr.ecr.us-east-1.amazonaws.com/cortex
   GH_REF: ${{ github.ref }}
   IMAGE_DOWNLOAD_LOCATION: ../downloaded_images
 
