--- a/.github/workflows/custom-aws-prerelease-ci.yml
+++ b/.github/workflows/custom-aws-prerelease-ci.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Run Tests
         run: CASSANDRA_TEST_ADDRESSES=cassandra:9042 make BUILD_IN_CONTAINER=false test
   build:
+    needs: [test, secure, lint]
     runs-on: [self-hosted, prod]
     container:
       image: quay.io/cortexproject/build-image:upgrade-build-image-debian-491e60715-WIP
@@ -106,6 +107,15 @@ jobs:
         run: |
           touch build-image/.uptodate
           make BUILD_IN_CONTAINER=false IMAGE_TAG=$DOCKER_IMAGE_TAG
+          mkdir /tmp/images
+          ln -s /tmp/images ./docker-images
+          make BUILD_IN_CONTAINER=false save-images IMAGE_TAG=$DOCKER_IMAGE_TAG
+          tar -cvf images.tar /tmp/images
+      - name: Upload Docker Images Artifact For Integ Test
+        uses: actions/upload-artifact@v2
+        with:
+          name: Docker Images For Integ Test
+          path: ./images.tar
       - name: Save Image
         uses: ./amp-builds/actions/save-image
         with:
@@ -124,8 +134,85 @@ jobs:
           rm -rf amp-builds
           rm ../images.tar
           docker rmi $(docker images --format '{{.Repository}}:{{.Tag}}' | grep 'quay.io/cortexproject/')
+  integration-configs-db:
+    needs: build
+    runs-on: [self-hosted, prod]
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Download Docker Images Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: Docker Images For Integ Test
+      - name: Extract Docker Images Archive
+        run: tar -xvf images.tar -C /
+      - name: Run Integration Configs Tests
+        # Github Actions does not support TTY in their default runners yet
+        run: |
+          touch build-image/.uptodate
+          MIGRATIONS_DIR=$(pwd)/cmd/cortex/migrations
+          make BUILD_IMAGE=quay.io/cortexproject/build-image:upgrade-build-image-debian-491e60715-WIP TTY='' configs-integration-test
+  integration:
+    needs: integration-configs-db
+    runs-on: [self-hosted, prod]
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Check out amp-builds
+        uses: actions/checkout@v2
+        with:
+          repository: aws-observability/amp-builds
+          path: amp-builds
+          token: ${{ secrets.MACHINE_PAT }}
+      - name: Generate Tag
+        uses: ./amp-builds/actions/generate-tag
+        with:
+          branch: master
+          ref: ${{ github.ref }}
+      - name: Download Docker Images Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: Docker Images For Integ Test
+      - name: Extract Docker Images Archive
+        run: tar -xvf images.tar -C /
+      - name: Load Docker Images
+        run: |
+          ls -la /tmp/images/
+          ln -s /tmp/images ./docker-images
+          ls -la ./docker-images
+          make BUILD_IN_CONTAINER=false IMAGE_TAG=$DOCKER_IMAGE_TAG load-images
+      - name: Preload Images
+        # We download docker images used by integration tests so that all images are available
+        # locally and the download time doesn't account in the test execution time, which is subject
+        # to a timeout
+        run: |
+          docker pull minio/minio:RELEASE.2019-12-30T05-45-39Z
+          docker pull amazon/dynamodb-local:1.11.477
+          docker pull consul:1.8.4
+          docker pull gcr.io/etcd-development/etcd:v3.4.7
+          docker pull quay.io/cortexproject/cortex:v1.0.0
+          docker pull quay.io/cortexproject/cortex:v1.1.0
+          docker pull quay.io/cortexproject/cortex:v1.2.0
+          docker pull quay.io/cortexproject/cortex:v1.3.0
+          docker pull quay.io/cortexproject/cortex:v1.4.0
+          docker pull quay.io/cortexproject/cortex:v1.5.0
+          docker pull quay.io/cortexproject/cortex:v1.6.0
+          docker pull shopify/bigtable-emulator:0.1.0
+          docker pull rinscy/cassandra:3.11.0
+          docker pull memcached:1.6.1
+          docker pull bouncestorage/swift-aio:55ba4331
+      - name: Integration Tests
+        run: |
+          export CORTEX_IMAGE_PREFIX="${IMAGE_PREFIX:-quay.io/cortexproject/}"
+          export IMAGE_TAG=$DOCKER_IMAGE_TAG
+          export CORTEX_IMAGE="${CORTEX_IMAGE_PREFIX}cortex:$IMAGE_TAG"
+          export CORTEX_CHECKOUT_DIR=$GITHUB_WORKSPACE
+          echo "Running integration tests with image: $CORTEX_IMAGE"
+          go test -tags=requires_docker -timeout 2400s -v -count=1 ./integration/...
+        env:
+          IMAGE_PREFIX: ${{ secrets.IMAGE_PREFIX }}
   deploy:
-    needs: [lint, secure, test, build]
+    needs: [lint, secure, test, integration, integration-configs-db, build]
     runs-on: [self-hosted, prod]
     steps:
       - name: Make Directory
